fix bg-img on smaller screens

--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -100,12 +100,79 @@
 } */
 
 /* style for desktop vertical view */
-@media (max-width: 1585px) {
+@media (max-width: 600px) {
+    body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 700;
+        
+        font-style: bold;
+        letter-spacing: 2px;
+        overflow-x: hidden;
+      }
+
+    .landing-page {
+      flex-direction: column;
+      align-items: flex-start;
+      padding-left: 0;
+      justify-content: flex-start;
+      height: auto; /* Let the height be determined by content */
+      text-align: left;
+    }
+  
+    .background-section {
+      /* position: absolute; */
+
+      width: 100%;
+      height: 100vh;
+      max-width: 100vh;
+      /* min-height: 100vh; */
+      background-image: url('./images/backgroud-mobile-compress.webp'), url('./images/backgroud-ruido-compress.webp');
+      background-size: contain, auto; /* Cover for the first image, auto for the second */
+      background-position: top center, center;
+      background-repeat: no-repeat; /* No-repeat for the first, repeat-y for the second */
+      /* background-attachment: local; Ensures that the background image scrolls with the content */
+      /* animation: colorChange 2s infinite alternate; */
+    }
+
+    .content {
+      /* position: relative; */
+      line-height: 150%;
+      width: 100%;
+      max-width: none; /* Remove max-width */
+      margin: 0; /* Remove margin */
+      padding: 20px;
+      margin-top: 71vh !important;
+      box-sizing: border-box;
+      background-image: url('./images/backgroud-ruido-compress.webp');
+      font-size: 0.55em;
+      white-space: nowrap; /* Prevent text from wrapping to the next line */
+      /* overflow: hidden; Hide overflow content */
+      text-overflow: ellipsis; 
+      border-radius: 0;
+      position: center;
+    }
+
+    .footer {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        /* flex-direction: column; */
+        flex: 1 1 45%;
+        flex-wrap: wrap;
+        gap: 2%; /* Space between links */
+        padding-top: 10%;
+        text-align: center;
+        color: white;
+      }
 
 }
 
 /* mobile view style */
-@media (max-width: 768px) {
+@media  (max-width: 768px) {
     body, html {
         margin: 0;
         padding: 0;
